# gcm

./: .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  Vagrantfile  dev-requirements.txt  mypy.ini  noxfile.py  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: deploy_docs.yml  gcm_python.yml  go_pkgs.yml  meta_internal.yml  release.yml
assets/logo/: README.md
debian/: changelog  control  gcm.dirs  gcm.links  healthchecks.links  rules
gcm/: CONTRIBUTING.md  README.md  __init__.py  _version.py
gcm/docs/: adding_new_collector.md  health_checks_onboarding.md  release.md
gcm/exporters/: __init__.py  do_nothing.py  file.py  graph_api.py  otel.py  stdout.py  webhook.py
gcm/health_checks/: README.md  click.py  device_telemetry_exception_handling.py  device_telemetry_utils.py  env_variables.py  measurement_units.py  subprocess.py  types.py
gcm/monitoring/: __init__.py  accumulate.py  click.py  clock.py  coerce.py  constants.py  dataclass_utils.py  date.py  decorators.py  device_telemetry_client.py  device_telemetry_nvml.py  get_members.py  itertools.py  passwd.py  storage.py  timezone.py
gcm/schemas/: dataclass.py  device_metrics.py  host_metrics.py  indexed_device_metrics.py  job_info.py  log.py
gcm/tests/: config.py  conftest.py  fakes.py  test_accumulate.py  test_builtin_accounting_plugins.py  test_click.py  test_clock.py  test_dataclasses.py  test_date.py  (+33 more)
shelper/: CONTRIBUTING.md  README.md  cache_helpers.go  cache_helpers_test.go  config.go  config_enum_test.go  entrypoint.go  go.mod  host.go  local.go  local_test.go  nvidia_smi.go  nvidia_smi_test.go  proc_helpers.go  proc_helpers_test.go  scontrol.go  slurm_helpers.go  slurm_helpers_test.go  squeue.go
slurmprocessor/: CONTRIBUTING.md  README.md  common.go  config.go  config_test.go  factory.go  go.mod  go.sum  logs.go  metrics.go  traces.go
systemd/: hc_resources.slice  sacct_backfill.service  sacct_running.service  scontrol.service  slurm_job_monitor.service  slurm_monitor.service  storage.service
website/: docusaurus.config.js  package-lock.json
(+381 files in other folders)
